syntax = "proto3";

/* >>
import "google/api/annotations.proto";
<< */

option csharp_namespace="Microsoft.eShopOnContainers.Services.Catalog.API.IntegrationEvents.ProtoEvents";

import "event_custom_types.proto";

message ProductPriceChangedIntegrationEventProto {
  int32 product_id = 1;
  CustomTypes.DecimalValue new_price = 2;
  CustomTypes.DecimalValue old_price = 3;
}